Fixes routes, URL was capitalized in client js

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -22,9 +22,9 @@
     </ul>
 
     <div id="main">
-        <div ng-view>
+        <ng-view>
 
-        </div>
+        </ng-view>
     </div>
 </main>
 
